# pubg-api

./: Cargo.toml  Dockerfile  readme.md  service.yaml
src/: inventory.rs  main.rs  pubg-guns.json  pubg.rs
src/pubg/: get.rs  guns.rs  inventory.rs  mod.rs  player.rs  pubg_api.rs  weapon_structs.rs
