[package]
name = "pubg_rust_server"
version = "0.1.0"
authors = ["Chris Watson <cwatson1988@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.57"
warp = "0.2"
parking_lot = "0.10.0"
reqwest = "0.10.8"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "0.2", features = ["macros"] }